--- a/gb/23/12/13/n14135377.md
+++ b/gb/23/12/13/n14135377.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>6种Costco电子产品12月有超值优惠</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-1072266114-600x400.jpg" />
 <h6>图为资料图。(Scott Olson/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年12月17日讯】（大纪元记者夏雨综合报导）很多人认为黑色星期五是购买电子产品的最好时机，其实12月因为是圣诞新年假期，很多商家也会提供电子产品折扣。美国仓储式连锁店Costco<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%BD%E5%B8%82%E5%A4%9A.md#1">好市多</a>）也不例外，会员们可以找到一些电子产品的大幅折扣，包括多款<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C%E4%BA%A7%E5%93%81.md#1">苹果产品</a>。</p>
+	<p>【大纪元2023年12月17日讯】（大纪元记者夏雨综合报导）很多人认为黑色星期五是购买电子产品的最好时机，其实12月因为是圣诞新年假期，很多商家也会提供电子产品折扣。美国仓储式连锁店Costco（好市多）也不例外，会员们可以找到一些电子产品的大幅折扣，包括多款苹果产品。</p>
 <p>过去几年，一年中电子产品促销的最佳日子通常是圣诞节后的12月27日。但预计今年零售商手头上不会有大量过剩库存。</p>
 <p>德勤零售策略负责人布莱恩?麦卡锡（Brian McCarthy）告诉哥伦比亚广播公司（CBS）《财经观察》（MoneyWatch）：“等到圣诞节后的风险在于，零售商通常会在圣诞节后削减额外的季节性库存，然而，零售商今年表示，他们的预测做得更好，而且他们的供应链状况也更好。”</p>
 <p>“作为一名消费者，我可以抓住机会获得圣诞节后的优惠，但也会面临没有太多选择的风险。”他说。</p>
@@ -16,29 +16,29 @@
 <p>价格：699.99美元</p>
 <p>即日起至12月24日，Costco会员购买第4代iPad Pro，可享受50美元折扣。</p>
 <p>这款11英寸iPad配备Liquid视网膜显示屏、广角摄像头，并通过Wi-Fi 6E保持网络连接。折扣价格适用于银色和深空灰色iPad Pro。每位Costco会员限购两部iPad。</p>
-<figure id="attachment_6534448" aria-describedby="caption-attachment-6534448" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2015/12/1511110713542124.jpg"><img class="size-large wp-image-6534448" src="https://i.epochtimes.com/assets/uploads/2015/12/1511110713542124-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-6534448" class="wp-caption-text">iPad资料图 (Stephen Lam/Getty Images)</figcaption></figure>
+<figure id="attachment_6534448" aria-describedby="caption-attachment-6534448" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2015/12/1511110713542124.jpg"><img decoding="async" class="size-large wp-image-6534448" src="https://i.epochtimes.com/assets/uploads/2015/12/1511110713542124-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-6534448" class="wp-caption-text">iPad资料图 (Stephen Lam/Getty Images)</figcaption></figure>
 <h2>2. MacBook Air（13.3英寸）</h2>
 <p>价格：749.99美元</p>
 <p>13.3英寸MacBook是Costco假日促销产品之一，截至12月24日，比原价低200美元。</p>
 <p>每位Costco会员限制购买两部MacBook Air。</p>
-<figure id="attachment_10913566" aria-describedby="caption-attachment-10913566" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/12/GettyImages-1055498528.jpg"><img class="size-large wp-image-10913566" src="https://i.epochtimes.com/assets/uploads/2018/12/GettyImages-1055498528-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10913566" class="wp-caption-text">MacBook Air资料图。(Stephanie Keith/Getty Images)</figcaption></figure>
+<figure id="attachment_10913566" aria-describedby="caption-attachment-10913566" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/12/GettyImages-1055498528.jpg"><img decoding="async" class="size-large wp-image-10913566" src="https://i.epochtimes.com/assets/uploads/2018/12/GettyImages-1055498528-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10913566" class="wp-caption-text">MacBook Air资料图。(Stephanie Keith/Getty Images)</figcaption></figure>
 <h2>3. Apple Watch系列9（GPS）</h2>
 <p>价格：329.99美元</p>
 <p>即日起至12月24日，Costco会员购买Apple Watch Series 9（GPS），即可享受60美元优惠。</p>
 <p>每块Apple Watch都包含“体能训练”应用程序（Workout App）和三个月免费Apple Fitness+。折扣价格适用于所有在售颜色的Apple Watch，包括午夜色、粉色、红色、银色和星光色。</p>
-<figure id="attachment_13804366" aria-describedby="caption-attachment-13804366" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/08/id13804366-570602.jpg"><img class="size-large wp-image-13804366" src="https://i.epochtimes.com/assets/uploads/2022/08/id13804366-570602-600x382.jpg" alt="" width="600" b="382" /></a><figcaption id="caption-attachment-13804366" class="wp-caption-text">图为Apple Watch。(Johannes Eisele/AFP)</figcaption></figure>
+<figure id="attachment_13804366" aria-describedby="caption-attachment-13804366" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/08/id13804366-570602.jpg"><img decoding="async" class="size-large wp-image-13804366" src="https://i.epochtimes.com/assets/uploads/2022/08/id13804366-570602-600x382.jpg" alt="" width="600" b="382" /></a><figcaption id="caption-attachment-13804366" class="wp-caption-text">图为Apple Watch。(Johannes Eisele/AFP)</figcaption></figure>
 <h2>4. 惠普（HP）Dragonfly G4?13.5英寸触摸屏笔记本电脑（Intel Evo认证）</h2>
 <p>价格：1,099.99美元</p>
 <p>HP Dragonfly触摸屏笔记本电脑是本季最省钱的产品之一。即日起至12月24日，Costco会员可享受比原来价格低400美元的优惠。</p>
 <p>每台HP Dragonfly触摸屏笔记本电脑均配Windows 11 Pro、英特尔集成显卡、独立音频放大器、AI降噪和全尺寸背光键盘。</p>
 <p>每个Costco会员仅限购买两台笔记本电脑。</p>
-<figure id="attachment_13040014" aria-describedby="caption-attachment-13040014" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13040014-shutterstock_1286518405.jpg"><img class="size-large wp-image-13040014" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040014-shutterstock_1286518405-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13040014" class="wp-caption-text">惠普笔记本电脑示意图。(Shutterstock)</figcaption></figure>
+<figure id="attachment_13040014" aria-describedby="caption-attachment-13040014" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13040014-shutterstock_1286518405.jpg"><img decoding="async" class="size-large wp-image-13040014" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040014-shutterstock_1286518405-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13040014" class="wp-caption-text">惠普笔记本电脑示意图。(Shutterstock)</figcaption></figure>
 <h2>5. Bose SoundLink Flex SE蓝牙扬声器（Bluetooth Speaker）</h2>
+<p>价格：99.99美元</p>
 <p>即日起至12月24日，Costco会员购买Bose Soundlink Flex SE蓝牙扬声器可享受30美元折扣。</p>
 <p>使用这款扬声器，可体验清晰、深沉的声音。每个Bose扬声器每次充电的电池续航时间长达12小时，具有蓝牙连接功能，并且防水、防尘。</p>
 <p>每个会员限购三台扬声器。</p>
 <h2>6. 雅马哈（Yamaha）ATS-1090条形音箱（Sound Bar） 带内置低音炮（Built-in Subwoofers）</h2>
-<p>价格：99.99美元</p>
 <p>使用带有内置低音炮的雅马哈ATS-1090条形音箱可提升娱乐体验。即日起至12月24日，Costco会员可享受制造商折扣50美元。</p>
 <p>除了内置低音炮之外，雅马哈ATS-1090条形音箱还具有内置Alexa语音控制、DTS Virtual:X虚拟环绕声，以及通过HDMI或光缆连接连接到电视的轻松设置。</p>
 <p>每个Costco会员限购3个条形音箱。</p>
@@ -48,37 +48,33 @@
 <p>责任编辑：李寰宇#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14127794.md#1">快抢货 当下Costco有两种商品卖得飞快</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/9/n14133030.md#1">圣诞新年 Costco六种节日必需品很实惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139784.md#1">从捕鱼到私企高管失踪 美驻日大使再酸中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139818.md#1">加州面临680亿创纪录赤字 未来3年会更多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/1/n14127794.md#1">快抢货 当下Costco有两种商品卖得飞快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/9/n14133030.md#1">圣诞新年 Costco六种节日必需品很实惠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390734.md#1">脱钩持续 美中国债收益率差距达十年来最大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390085.md#1">【财经非常道】中共查英伟达 美中芯片战再升级</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/7/27/n2977832.md#1" target="_blank">鲜为人知的马克思之七：渎神的马克思</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/19/n9864134.md#1" target="_blank">毛泽东诗词宣扬暴力 为文革武斗输注能量</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11236766.md#1" target="_blank">幸遇大法重获希望 华府法轮功学员感恩师父</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131486.md#1">郑和七下西洋成功完成使命 背后显现神秘力量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139643.md#1">【十字路口】港共毁香港 恐吓台湾 折磨黎智英</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138945.md#1">【新闻大破解】中共国安管经济还管血库？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139695.md#1">【探索时分】俄军伤亡36万 美暂停对乌援助？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130848.md#1">12国有航母 仅一国有造价133亿超级航母</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135377.md#1">6种Costco电子产品12月有超值优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137767.md#1">岳山：中南海山头林立 中共核心危机将爆发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14139107.md#1">周海媚接种新冠疫苗信息遭百度删除 网友热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138312.md#1">疑因杨幂赵丽颖争演女二号 陈可辛发排序声明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138295.md#1">居台3年将首次投票选总统 杜汶泽吁守护国家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138340.md#1">指点8岁女儿穿搭反被上一课 昆凌直呼好骄傲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14139030.md#1">朱丹自曝遭好友骗光积蓄 意外引来闺密喊告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：购在喜悦时刻 亚马逊节日优惠连连</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">RENPHO 加重加热垫 缓解背痛 ETL安全认证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104521.md#1">没吃肥肉胆固醇还是高？营养师教3招降胆固醇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138089.md#1">主管好不好怎知道？专家教你从这一点判断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139212.md#1">日本女子不运动成功瘦10公斤 秘诀是9个好习惯</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/13/n14135377.htm">6种Costco电子产品12月有超值优惠</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135377.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？河南奇人张四目之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386112.md#1">【未解之谜】用DNA谱曲？遗传学中隐藏生命密码</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389283.md#1">【军事情报局】阿萨德十天倒台 以军攻入叙利亚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390708.md#1">【新闻大破解】美军反制 共军围岛不敢说演习</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390112.md#1">【时事金扫描】以乌首次联合战役 俄要报复</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389267.md#1">传中共拟允许人民币大幅贬值 专家析利弊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389628.md#1">海关署长俞建华猝死 其靠山被指是丁薛祥</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389618.md#1">【内幕】惧美国制裁 中共跨国镇压密令曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389328.md#1">孙俪自曝13岁儿子用身体帮她挡车 网友大赞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389389.md#1">高圆圆素颜带娃外出骑车 一细节获赞温馨有爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388478.md#1">泰勒丝“时代”巡演落幕 工作人员奖金惊人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388542.md#1">《鱿鱼游戏2》破例 未播入围金球奖最佳剧集</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390043.md#1">开跑车随手丢烟头 《庆余年》主演张若昀惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14383980.md#1">吃米饭同样可控糖  比生酮饮食更永续更安全</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389408.md#1">为什么不该用微波炉泡茶？ 泡好茶三技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389513.md#1">开卷真的有益 擅长阅读者大脑结构不同</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389057.md#1">用荷兰锅煮饭 停电也不担心 一锅到底营养更全面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387834.md#1">阑尾炎 便秘 腹泻？中医2招应对肚子痛</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/13/n14135377.htm">6种Costco电子产品12月有超值优惠</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/13/n14135377.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
